Merged revisions 70344 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r70344 | antoine.pitrou | 2009-03-13 20:25:20 +0100 (ven., 13 mars 2009) | 4 lines

  Issue #5392: when a very low recursion limit was set, the interpreter would
  abort with a fatal error after the recursion limit was hit twice.
........